--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -112,24 +112,26 @@ body header.main-header
 
 
 // Job and education description changes
-.content-block
-    .main-description
+section.documentation .container
 
-        p
-            margin-right: 55px !important
+    .content-block
+        .main-description
 
-        button.dropdown-button
-            float: right
-            margin-right: 10px
-            width: 40px
-            height: 40px
+            p
+                margin-right: 55px !important
 
-            i
-                color: #c1c1c1
-                font-size: 30px
-                line-height: 30px
-                width: 30px
-                transform: translate(-15px, -15px)
+            button.dropdown-button
+                float: right
+                margin-right: 10px
+                width: 40px
+                height: 40px
+
+                i
+                    color: #c1c1c1
+                    font-size: 30px
+                    line-height: 30px
+                    width: 30px
+                    transform: translate(-15px, -15px)
 
 
 
