--- a/ethnode/webui/mixins/modals/gig/edit-gig.jade
+++ b/ethnode/webui/mixins/modals/gig/edit-gig.jade
@@ -1,26 +1,26 @@
-#add-gig.add.modal-box.flex.floating
+#edit-gig.edit.modal-box.flex.floating
 
     .modal-box-content: .inner-modal: .content
 
-        .modal-header: h3 Add Gig
+        .modal-header: h3 Edit Gig
 
         .success-message
             h1.title Congratulations!
-            .success-content: p Your gig was created.
+            .success-content: p Your gig was updated.
 
             .buttons
                 button.mdl-button.mdl-js-button.close-button.congrats-close Close the modal to see it
                 span OR
-                button.mdl-button.mdl-js-button.create-new create new gig
+                button.mdl-button.mdl-js-button.create-new edit gig again
 
 
         .modal-body
 
             .form-group
-                input.input-file#input-image-job(type="file", accept="image/*", placeholder="Add image or video")
-                label(for="input-image-job") Add Photo
-                img.file-input-first-image.img-job(src="images/image-video-image-file.png", alt="Add a file")
-                img#input-image-job(src="#", alt="")
+                input.input-file#input-image-gig(type="file", accept="image/*", placeholder="Add image or video")
+                label(for="input-image-gig") Add Photo
+                img.file-input-first-image.img-gig(src="images/image-video-image-file.png", alt="Add a file")
+                img#input-image-gig(src="#", alt="")
 
             .modal-inputs
 
@@ -52,8 +52,8 @@
                         label.mdl-textfield__label(for="description") Description (what have you done or currently do?)
 
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.left-side
-                        input#budget.mdl-textfield__input(type="text", name="budget")
-                        label.mdl-textfield__label(for="budget") Price
+                        input#price.mdl-textfield__input(type="text", name="price")
+                        label.mdl-textfield__label(for="price") Price
                         span.mdl-textfield__error Input is not a number!
 
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.right-side
@@ -62,5 +62,5 @@
 
         .modal-footer
             button.mdl-button.mdl-js-button.close-button Close
-            button#publish.mdl-button.mdl-js-button.finish-button(style="color: #5CAB7D") Publish
-            .mdl-tooltip(data-mdl-for="publish") This text will be changed anyway.
+            button#update4.mdl-button.mdl-js-button.finish-button(style="color: #5CAB7D") Update
+            .mdl-tooltip(data-mdl-for="update4") This text will be changed anyway.
