--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -14,7 +14,7 @@ section.profiles-page-content
                 p
                     font-family: 'Roboto', sans-serif
                     font-size: 16px
-                    font-weight: 700
+                    font-weight: 500
                     line-height: 1.29
                     color: #4a4a4a
                     margin: 0
@@ -28,12 +28,38 @@ section.profiles-page-content
         .gigs
 
             .gigs-container
+                width: calc(100% - 45px)
+                margin: 0 auto
+
+                &:after
+                    clear: both
+                    content: '.'
+                    display: block
+                    height: 0
+                    line-height: 0
+                    visibility: hidden
 
                 .gig
-                    width: 230px
+                    width: 240px
+                    height: 306px
                     border: 1px solid #e5e5e5
                     box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.1)
                     background-color: white
+                    position: relative
+                    max-width: 240px
+                    max-height: 306px
+                    float: left
+                    margin-right: 30px
+                    margin-bottom: 30px
+
+                    &:nth-child(3n)
+                        margin-right: 0
+
+                    button.mdl-button--icon
+                        position: absolute
+                        right: 0
+                        top: 5px
+                        color: #c1c1c1
 
                     img
                         width: 100%
