--- a/ethnode/webui/styles/newstyles/modals/body.sass
+++ b/ethnode/webui/styles/newstyles/modals/body.sass
@@ -69,15 +69,7 @@
             &.active
                 display: none
 
-        input#input-image-avatar + label
-            width: 200px
-            height: 200px
-            padding: 200px 0 0 0
-
-        img#input-image-story,
-        img#input-image-job,
-        img#input-image-education,
-        img#input-image-avatar
+        img.show-image
             position: absolute
             width: auto
             max-width: 440px
