Many changes to how gig looks. You can now create/edit/delete gigs and all data will be sent to the back-end. Works smoothly. + Made filters fixed

--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -68,6 +68,7 @@ html(lang='en-US')
 
         include mixins/modals/gig/add-gig
         include mixins/modals/gig/edit-gig
+        include mixins/modals/gig/modal-gig
 
         include mixins/modals/edit-profile
 
