--- a/ethnode/webui/mixins/header.jade
+++ b/ethnode/webui/mixins/header.jade
@@ -52,7 +52,7 @@ header.main-header
 
                     li.profile#settings-dropdown(data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
 
-                        img.profile-picture(src="", alt="")
+                        img#avatar-img.profile-picture(src="", alt="")
 
                         // JSON DATA GOES HERE
                         span
