--- a/ethnode/webui/mixins/modals/gig/add-gig.jade
+++ b/ethnode/webui/mixins/modals/gig/add-gig.jade
@@ -18,9 +18,9 @@
 
             .form-group
                 input.input-file#input-image-gig(type="file", accept="image/*", placeholder="Add image or video")
-                label(for="input-image-gig") Add Photo
+                label.img-label(for="input-image-gig") Add Photo
                 img.file-input-first-image.img-gig(src="images/image-video-image-file.png", alt="Add a file")
-                img#input-image-gig.show-image(src="#", alt="")
+                img#input-image-gig.show-image.empty(src="#", alt="")
 
             .modal-inputs
 
