--- a/ethnode/webui/mixins/modals/gig/edit-gig.jade
+++ b/ethnode/webui/mixins/modals/gig/edit-gig.jade
@@ -17,10 +17,10 @@
         .modal-body
 
             .form-group
-                input.input-file#input-image-gig(type="file", accept="image/*", placeholder="Add image or video")
-                label(for="input-image-gig") Add Photo
-                img.file-input-first-image.img-gig(src="images/image-video-image-file.png", alt="Add a file")
-                img#input-image-gig.show-image(src="#", alt="")
+                input.input-file#input-image-gig-edit(type="file", accept="image/*", placeholder="Add image or video")
+                label(for="input-image-gig-edit") Add Photo
+                img.file-input-first-image.img-gig-edit(src="images/image-video-image-file.png", alt="Add a file")
+                img#input-image-gig-edit.show-image(src="#", alt="")
 
             .modal-inputs
 
