--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -1629,6 +1629,12 @@ section.profiles-page-content .container {
   padding-top: 150px;
 }
 
+section.gigs-page-content .container .filters,
+section.jobs-page-content .container .filters,
+section.profiles-page-content .container .filters {
+  position: fixed;
+}
+
 section.gigs-page-content .container .filters .filter,
 section.jobs-page-content .container .filters .filter,
 section.profiles-page-content .container .filters .filter {
@@ -1653,10 +1659,16 @@ section.profiles-page-content .container .filters .filter label.mdl-checkbox {
   margin-left: 15px;
 }
 
+section.gigs-page-content .container .gigs,
+section.jobs-page-content .container .gigs,
+section.profiles-page-content .container .gigs {
+  float: right;
+}
+
 section.gigs-page-content .container .gigs .gigs-container,
 section.jobs-page-content .container .gigs .gigs-container,
 section.profiles-page-content .container .gigs .gigs-container {
-  width: calc(100% - 45px);
+  width: calc(100% - 15px);
   margin: 0 auto;
 }
 
@@ -1685,12 +1697,18 @@ section.profiles-page-content .container .gigs .gigs-container .gig {
   float: left;
   margin-right: 30px;
   margin-bottom: 30px;
+  transition: all 0.15s ease-in;
 }
 
-section.gigs-page-content .container .gigs .gigs-container .gig:nth-child(3n),
-section.jobs-page-content .container .gigs .gigs-container .gig:nth-child(3n),
-section.profiles-page-content .container .gigs .gigs-container .gig:nth-child(3n) {
-  margin-right: 0;
+section.gigs-page-content .container .gigs .gigs-container .gig:hover, section.gigs-page-content .container .gigs .gigs-container .gig:focus, section.gigs-page-content .container .gigs .gigs-container .gig:active,
+section.jobs-page-content .container .gigs .gigs-container .gig:hover,
+section.jobs-page-content .container .gigs .gigs-container .gig:focus,
+section.jobs-page-content .container .gigs .gigs-container .gig:active,
+section.profiles-page-content .container .gigs .gigs-container .gig:hover,
+section.profiles-page-content .container .gigs .gigs-container .gig:focus,
+section.profiles-page-content .container .gigs .gigs-container .gig:active {
+  background-color: #fbfafa;
+  cursor: pointer;
 }
 
 section.gigs-page-content .container .gigs .gigs-container .gig button.mdl-button--icon,
@@ -1700,28 +1718,74 @@ section.profiles-page-content .container .gigs .gigs-container .gig button.mdl-b
   right: 0;
   top: 5px;
   color: #c1c1c1;
+  z-index: 1;
 }
 
-section.gigs-page-content .container .gigs .gigs-container .gig img,
-section.jobs-page-content .container .gigs .gigs-container .gig img,
-section.profiles-page-content .container .gigs .gigs-container .gig img {
+section.gigs-page-content .container .gigs .gigs-container .gig .image,
+section.jobs-page-content .container .gigs .gigs-container .gig .image,
+section.profiles-page-content .container .gigs .gigs-container .gig .image {
+  position: relative;
   width: 100%;
+  height: 142px;
+  overflow: hidden;
 }
 
-section.gigs-page-content .container .gigs .gigs-container .gig h5,
-section.jobs-page-content .container .gigs .gigs-container .gig h5,
-section.profiles-page-content .container .gigs .gigs-container .gig h5 {
-  margin: 0;
-  margin-top: 10px;
+section.gigs-page-content .container .gigs .gigs-container .gig .image img,
+section.jobs-page-content .container .gigs .gigs-container .gig .image img,
+section.profiles-page-content .container .gigs .gigs-container .gig .image img {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .owner-info,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info {
   margin-left: 10px;
-  margin-bottom: 5px;
+  margin-top: 10px;
 }
 
-section.gigs-page-content .container .gigs .gigs-container .gig h5,
-section.jobs-page-content .container .gigs .gigs-container .gig h5,
-section.profiles-page-content .container .gigs .gigs-container .gig h5 {
-  font-size: 14px;
+section.gigs-page-content .container .gigs .gigs-container .gig .owner-info img,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info img,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info img {
+  float: left;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  margin-top: 1px;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .owner-info h5, section.gigs-page-content .container .gigs .gigs-container .gig .owner-info h4,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info h5,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info h4,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info h5,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info h4 {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1;
+  color: black;
+  margin-left: 32px;
+  transition: all 0.15s ease-in;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .owner-info h5:hover, section.gigs-page-content .container .gigs .gigs-container .gig .owner-info h5:active, section.gigs-page-content .container .gigs .gigs-container .gig .owner-info h5:focus,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info h5:hover,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info h5:active,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info h5:focus,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info h5:hover,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info h5:active,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info h5:focus {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .owner-info h4,
+section.jobs-page-content .container .gigs .gigs-container .gig .owner-info h4,
+section.profiles-page-content .container .gigs .gigs-container .gig .owner-info h4 {
   color: #86939e;
+  font-size: 12px;
+  margin-top: 2px;
 }
 
 section.gigs-page-content .container .gigs .gigs-container .gig p,
@@ -1729,29 +1793,86 @@ section.jobs-page-content .container .gigs .gigs-container .gig p,
 section.profiles-page-content .container .gigs .gigs-container .gig p {
   font-size: 16px;
   color: black;
-  line-height: 1.71;
+  overflow: hidden;
   padding: 0 10px;
+  height: 50px;
+  margin: 0;
+  margin-top: 10px;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .lower-info,
+section.jobs-page-content .container .gigs .gigs-container .gig .lower-info,
+section.profiles-page-content .container .gigs .gigs-container .gig .lower-info {
+  position: absolute;
+  bottom: 38px;
+  width: 100%;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .lower-info .reputation,
+section.jobs-page-content .container .gigs .gigs-container .gig .lower-info .reputation,
+section.profiles-page-content .container .gigs .gigs-container .gig .lower-info .reputation {
+  float: left;
+  height: 24px;
+  margin-left: 10px;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .lower-info .reputation i,
+section.jobs-page-content .container .gigs .gigs-container .gig .lower-info .reputation i,
+section.profiles-page-content .container .gigs .gigs-container .gig .lower-info .reputation i {
+  color: #92A8D1;
+  font-size: 20px;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .lower-info .reputation span,
+section.jobs-page-content .container .gigs .gigs-container .gig .lower-info .reputation span,
+section.profiles-page-content .container .gigs .gigs-container .gig .lower-info .reputation span {
+  color: #92A8D1;
+  position: relative;
+  top: -4.5px;
+  left: 4px;
+  font-weight: 500;
+}
+
+section.gigs-page-content .container .gigs .gigs-container .gig .lower-info h6.expire,
+section.jobs-page-content .container .gigs .gigs-container .gig .lower-info h6.expire,
+section.profiles-page-content .container .gigs .gigs-container .gig .lower-info h6.expire {
+  float: right;
+  font-size: 12px;
+  color: #86939e;
+  margin: 0;
+  margin-right: 10px;
 }
 
 section.gigs-page-content .container .gigs .gigs-container .gig .footer,
 section.jobs-page-content .container .gigs .gigs-container .gig .footer,
 section.profiles-page-content .container .gigs .gigs-container .gig .footer {
   border-top: 1px solid #e5e5e5;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 38px;
 }
 
 section.gigs-page-content .container .gigs .gigs-container .gig .footer h4,
 section.jobs-page-content .container .gigs .gigs-container .gig .footer h4,
 section.profiles-page-content .container .gigs .gigs-container .gig .footer h4 {
   text-align: right;
-  font-size: 15px;
   color: black;
-  margin-right: 5px;
+  margin-right: 10px;
+  line-height: 35px;
+  font-weight: 300;
+  font-size: 11px;
+  text-transform: uppercase;
 }
 
 section.gigs-page-content .container .gigs .gigs-container .gig .footer h4 span,
 section.jobs-page-content .container .gigs .gigs-container .gig .footer h4 span,
 section.profiles-page-content .container .gigs .gigs-container .gig .footer h4 span {
-  font-size: 17px;
+  font-size: 18px;
+  font-weight: 400;
+  margin-left: 2px;
+  position: relative;
+  top: 2px;
 }
 
 .modal-box-content .inner-modal {
@@ -1946,7 +2067,6 @@ section.profiles-page-content .container .gigs .gigs-container .gig .footer h4 s
   right: 0;
   margin: 0 auto;
   z-index: 100;
-  display: none;
 }
 
 .modal-box-content .inner-modal .content .modal-body .form-group img#input-image-avatar {
@@ -2437,11 +2557,16 @@ section.profiles-page-content .container .gigs .gigs-container .gig .footer h4 s
 body {
   background-color: #f2f2f2;
   -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
+  overflow: auto;
+  height: 100%;
 }
 
 body.up {
   margin-top: -59px;
+}
+
+body.modal-open {
+  overflow: auto;
 }
 
 body header.main-header {
