--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -25,13 +25,23 @@
     font-family: 'Roboto', sans-serif
     -webkit-overflow-scrolling: touch
 
+// For bootstrap modals - TURN ON IF NEEDED
+// html
+//     overflow: hidden
+//     height: 100%
+
 body
     background-color: #f2f2f2
     -webkit-overflow-scrolling: touch
-    overflow-y: scroll
+    overflow: auto
+    height: 100%
 
     &.up
         margin-top: -59px
+
+    &.modal-open
+        overflow: auto
+
 
 body header.main-header
     position: fixed
