Gigs page changes for search engine

--- a/ethnode/webui/mixins/modals/gig/add-gig.jade
+++ b/ethnode/webui/mixins/modals/gig/add-gig.jade
@@ -32,8 +32,8 @@
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.left-side
                         select.ui.dropdown#category
                             option(value="") Select Category
-                            option(value="1") Development
-                            option(value="2") Mobile Development
+                            option(value="1") Software Development
+                            option(value="2") Entertainment
                             option(value="3") Graphic Design
                             option(value="4") Content Writing
                             option(value="5") Accountants
