--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -4,16 +4,16 @@ section.gigs-page-content
 
         .filters.col-md-3
 
-            .filter
+            .filter.category
                 p Category
 
                 label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-1")
                     input#checkbox-1.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Development
+                    span.mdl-checkbox__label Software Development
 
                 label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-2")
                     input#checkbox-2.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Mobile Development
+                    span.mdl-checkbox__label Entertainment
 
                 label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-3")
                     input#checkbox-3.mdl-checkbox__input(type="checkbox")
@@ -36,7 +36,7 @@ section.gigs-page-content
                     span.mdl-checkbox__label Assistants
 
 
-            .filter
+            .filter.job-type
                 p Job Type
 
                 label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-8")
@@ -48,7 +48,7 @@ section.gigs-page-content
                     span.mdl-checkbox__label Fixed Price
 
 
-            .filter
+            .filter.experience-level
                 p Experience Level
 
                 label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-10")
@@ -64,7 +64,7 @@ section.gigs-page-content
                     span.mdl-checkbox__label Expert
 
 
-            .filter
+            .filter.budget
                 p Budget
 
                 .rkmd-slider.slider-continous.slider-shadow.slider-lightBlue.slider-light
