--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -146,6 +146,70 @@ section.documentation .container
 
 
 
+.value
+    position: absolute
+    top: 30px
+    left: 50%
+    margin: 0 0 0 -20px
+    width: 40px
+    text-align: center
+    display: block
+
+    // optional
+    font-weight: normal
+    font-family: Verdana, Arial, sans-serif
+    font-size: 14px
+    color: #333
+
+    i
+        font-style: normal
+
+.price-range-both.value
+    width: 100px
+    margin: 0 0 0 -50px
+    top: 26px
+
+.price-range-both
+    display: none
+
+
+
+// .value {
+//   position: absolute;
+//   top: 30px;
+//   left: 50%;
+//   margin: 0 0 0 -20px;
+//   width: 40px;
+//   text-align: center;
+//   display: block;
+
+//   /* optional */
+
+//   font-weight: normal;
+//   font-family: Verdana,Arial,sans-serif;
+//   font-size: 14px;
+//   color: #333;
+// }
+
+// .price-range-both.value {
+//   width: 100px;
+//   margin: 0 0 0 -50px;
+//   top: 26px;
+// }
+
+// .price-range-both {
+//   display: none;
+// }
+
+// .value i {
+//   font-style: normal;
+// }
+
+
+
+
+
+
 
 
 // .tick-animation-ctn
