--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -97,6 +97,9 @@ html(lang='en-US')
         // jQuery 3.1.1
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
 
+        // jQuery UI 1.11.2
+        script(src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js")
+
         // BootstrapJS 3.3.7
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
 
