--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -107,7 +107,9 @@ section.gigs-page-content
                 //-         li.mdl-menu__item.open-modal(open-modal="#edit-gig") Edit
                 //-         li.mdl-menu__item.delete Delete
 
-                //-     .image: img(src="images/paypal.jpg", alt="Gig")
+                //-     .ui.fluid.image
+                //-         .ui.black.ribbon.label Category
+                //-         .image-block: img(src="images/paypal.jpg")
 
                 //-     .owner-info
                 //-         img(src="/api/v1/profile/?q=avatar", alt="Avatar")
