--- a/ethnode/webui/styles/newstyles/modals/body.sass
+++ b/ethnode/webui/styles/newstyles/modals/body.sass
@@ -20,6 +20,10 @@
                 clear: both
                 width: 100%
 
+            > div.ui.right.labeled.input
+                float: left
+                margin-top: 10px
+
 
     .form-group
         position: relative
