--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -66,16 +66,20 @@ section.profiles-page-content
                         color: #c1c1c1
                         z-index: 1
 
-                    .image
+                    .ui.label
+                        z-index: 1
+
+                    .image-block, .image
                         position: relative
                         width: 100%
                         height: 142px
-                        overflow: hidden
 
                         img
                             width: 100%
                             height: auto
-                            overflow: hidden
+
+                    .image-block
+                        overflow: hidden
 
                     .owner-info
                         margin-left: 10px
