Updated gigs page and got outputs for search engine

--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -67,7 +67,7 @@ section.gigs-page-content
             .filter.budget
                 p Budget
 
-                #slider
+                //- #slider
 
                 //- .rkmd-slider.slider-continous.slider-shadow.slider-lightBlue.slider-light
                 //-     input(type='range', min='0', max='100', value='65')
