--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -68,6 +68,8 @@ section.profiles-page-content
 
                     .ui.label
                         z-index: 1
+                        background-color: #bfc0c1bd !important
+                        border-color: #bfc0c1bd !important
 
                     .image-block, .image
                         position: relative
