--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -31,7 +31,7 @@
 //     height: 100%
 
 body
-    background-color: #f2f2f2
+    background-color: #bfc0c121
     -webkit-overflow-scrolling: touch
     overflow: auto
     height: 100%
